Bug 164619 - Newly created forms can't be opened again
Summary: Newly created forms can't be opened again
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords:
Depends on:
Blocks: Database-Forms
  Show dependency treegraph
 
Reported: 2025-01-07 08:39 UTC by Mike Kaganski
Modified: 2025-02-12 09:10 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2025-01-07 08:39:13 UTC
1. Create a new database.
2. Create a new form in Design View.
3. Save the form.
4. Close the form.
5. Try to open the form (or edit it).

=> The document "Form1" could not be opened. SfxBaseModel::loadFromStorage: 0xf26(Error Area:Io Class:Format Code:38)

This is caused by a mismatch between ODF versions of the form's content.xml (1.4) and its version in the package's manifest.xml (1.2). This mismatch was created in commit 16de54a5c47fbc4691ee099c1f7bb559a8fe11ac, to workaround problems appeared after commit 519d96fd8b83ef4c61576d87b58f97b7e6e6e3c6 (which started to write the ODF version to manifest) in older versions. But that workaround reversed the problem, so that the newer versions having that patch started to generate the inconsistency.

The relevant change that prevents opening forms with ODF version mismatch is commit 0a0f205775807d63e7f6dd910de368bb12b11a49 (landed in 5.4).
Comment 1 Mike Kaganski 2025-01-07 08:55:09 UTC
https://gerrit.libreoffice.org/c/core/+/179867
Comment 2 Commit Notification 2025-01-07 11:27:24 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/61c12dd1c80e4b7227a614227bb690b00feb78ad

tdf#164619: bite the bullet, and write the correct ODF version

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-01-12 14:02:29 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/03da31134ecd7a229c909dcd4580b171d227e698

tdf#164619: bite the bullet, and write the correct ODF version

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.